# atestat-boids

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  compile.ps1  run.ps1
include/: boid.hpp  fps.hpp  info.hpp  ray.hpp  rest.hpp  segment.hpp  showable.hpp  slider.hpp  wall.hpp
src/: boid.cpp  fps.cpp  info.cpp  main.cpp  ray.cpp  rest.cpp  segment.cpp  showable.cpp  slider.cpp  wall.cpp
